// Copyright 2021 Jubox gRPC.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package grpc.proto.jubox;
option go_package = "github.com/pjchender/go-backend-template/internal/grpc/proto/jubox";

// Jubox service definition
service Jubox {
  rpc SystemEventUpdate (SystemEvent) returns (UpdateResp) {}
  rpc BedEventUpdate (BedEvent) returns (UpdateResp) {}
  rpc BedReportUpdate (BedReport) returns (UpdateResp) {}
  rpc FallEventUpdate (FallEvent) returns (UpdateResp) {}
}

message SystemEvent {
  uint32 transaction_no = 1;
  string timestamp = 2;
  string device_id = 3;
  EventDetail event_detail = 4;
}

message EventDetail {
  string name = 1;
  string message = 2;
}

message BedEvent {
  uint32 transaction_no = 1;
  string device_id = 2;
  string timestamp = 3;
  EventDetail event_detail = 4;
}

message BedReport {
  uint32 transaction_no = 1;
  string device_id = 2;
  string timestamp = 3;
  BedReportDetail bed_report_detail = 4;
}

message BedReportDetail {
  string sleep_start_time = 1;      // 2020-07-20T03:01:40.000Z,
  string sleep_end_time = 2;        // 2020-07-20T04:03:16.000Z,
  uint32 sleep_latency = 3;      // 1965 (sec)
  float sleep_effectiveness = 4; // 54.167
  uint32 turn_over_cnt = 5;       // 5
  uint32 not_in_bed_cnt = 6;       // 0
  uint32 not_in_bed_time = 7;     // 1234
}

message FallEvent {
  uint32 transaction_no = 1;
  string device_id = 2;
  FallEventDetail fall_event_detail = 3;
}

message FallEventDetail {
  EventDetail event_detail = 2;
}

message UpdateResp {
  uint32 transaction_no = 1;
  string resp_code = 2;
  string resp_message = 3;
}


